#!/usr/bin/env python3
"""
Teste de sincroniza√ß√£o com o servidor sem interface gr√°fica
"""

import sys
import os
sys.path.append(os.path.join(os.path.dirname(__file__), 'src', 'GameClient'))

# Adicionar o diret√≥rio GameClient ao path
client_path = os.path.join(os.path.dirname(__file__), 'src', 'GameClient')
sys.path.insert(0, client_path)

from grpc_client import grpc_client
import time

def test_server_connection():
    """Testa conex√£o b√°sica com o servidor"""
    print("üîó Testando conex√£o com o servidor...")
    
    try:
        # Teste de login
        print("1. Testando registro de conta...")
        grpc_client.connect()
        
        # Registrar nova conta
        response = grpc_client.register("testuser@test.com", "testpass123")
        if response and response.success:
            print(f"‚úÖ Registro bem-sucedido: {response.message}")
        else:
            print(f"‚ùå Falha no registro: {response.message if response else 'Sem resposta'}")
            
        # Login
        print("2. Testando login...")
        response = grpc_client.login("testuser@test.com", "testpass123")
        if response and response.success:
            print(f"‚úÖ Login bem-sucedido! Token: {response.token[:20]}...")
            token = response.token
        else:
            print(f"‚ùå Falha no login: {response.message if response else 'Sem resposta'}")
            return
        
        # Criar personagem
        print("3. Testando cria√ß√£o de personagem...")
        response = grpc_client.create_character(token, "TestPlayer", "Warrior")
        if response and response.success:
            print(f"‚úÖ Personagem criado: {response.message}")
        else:
            print(f"‚ùå Falha na cria√ß√£o: {response.message if response else 'Sem resposta'}")
            
        # Listar personagens
        print("4. Testando listagem de personagens...")
        response = grpc_client.list_characters(token)
        if response and response.success:
            print(f"‚úÖ Personagens encontrados: {len(response.characters)}")
            if response.characters:
                char = response.characters[0]
                print(f"   - Nome: {char.name}, Level: {char.level}, EXP: {char.experience}")
        else:
            print(f"‚ùå Falha na listagem: {response.message if response else 'Sem resposta'}")
            
        # Entrar no mundo
        print("5. Testando entrada no mundo...")
        response = grpc_client.join_world(token)
        if response and response.success:
            print(f"‚úÖ Entrou no mundo: {response.message}")
            if response.player:
                print(f"   - Posi√ß√£o: ({response.player.position_x}, {response.player.position_y})")
                print(f"   - Stats: Level {response.player.level}, EXP {response.player.experience}")
                print(f"   - HP: {response.player.current_hp}/{response.player.max_hp}")
        else:
            print(f"‚ùå Falha ao entrar no mundo: {response.message if response else 'Sem resposta'}")
            
        # Teste sincroniza√ß√£o de stats
        print("6. Testando sincroniza√ß√£o de stats...")
        response = grpc_client.update_player_stats(token, level=2, experience=150, hp=95, mp=45)
        if response and response.success:
            print(f"‚úÖ Stats sincronizados com sucesso!")
        else:
            print(f"‚ùå Falha na sincroniza√ß√£o de stats: {response.message if response else 'Sem resposta'}")
            
        # Teste sincroniza√ß√£o de posi√ß√£o
        print("7. Testando sincroniza√ß√£o de posi√ß√£o...")
        response = grpc_client.update_player_position(
            token,
            position_x=1000.0, 
            position_y=800.0,
            facing_direction=2,
            movement_state="walking"
        )
        if response and response.success:
            print(f"‚úÖ Posi√ß√£o sincronizada com sucesso!")
        else:
            print(f"‚ùå Falha na sincroniza√ß√£o de posi√ß√£o: {response.message if response else 'Sem resposta'}")
            
        # Teste movimento
        print("8. Testando comando de movimento...")
        response = grpc_client.move_player(token, 1100.0, 900.0, "run")
        if response and response.success:
            print(f"‚úÖ Movimento enviado: {response.message}")
        else:
            print(f"‚ùå Falha no movimento: {response.message if response else 'Sem resposta'}")
            
        print("\nüéâ Todos os testes de sincroniza√ß√£o conclu√≠dos!")
        
    except Exception as e:
        print(f"‚ùå Erro durante os testes: {e}")
        import traceback
        traceback.print_exc()
    finally:
        grpc_client.close()

if __name__ == "__main__":
    test_server_connection()
