#!/usr/bin/env python3
"""
Teste simples de sincroniza√ß√£o
"""

import sys
import os

# Importar diretamente os m√≥dulos
from grpc_client_standalone import grpc_client
import time

def test_sync():
    print("üîó Testando sincroniza√ß√£o com servidor...")
    
    try:
        grpc_client.connect()
        
        # Teste login com credenciais existentes
        print("1. Fazendo login...")
        response = grpc_client.login("testuser@test.com", "testpass123")
        if response and response.success:
            print(f"‚úÖ Login bem-sucedido!")
            token = response.token
            
            # Teste entrada no mundo
            print("2. Entrando no mundo...")
            response = grpc_client.join_world(token)
            if response and response.success:
                print(f"‚úÖ Mundo joinado: {response.message}")
                
                # Teste sincroniza√ß√£o de stats
                print("3. Sincronizando stats...")
                response = grpc_client.update_player_stats(token, level=5, experience=500, hp=90, mp=40)
                if response:
                    print(f"‚úÖ Stats atualizados!")
                
                # Teste sincroniza√ß√£o de posi√ß√£o
                print("4. Sincronizando posi√ß√£o...")
                response = grpc_client.update_player_position(
                    token, 
                    position_x=1200.0, 
                    position_y=1000.0,
                    facing_direction=3,
                    movement_state="running"
                )
                if response:
                    print(f"‚úÖ Posi√ß√£o atualizada!")
                    
                print("\nüéâ SINCRONIZA√á√ÉO FUNCIONANDO! Todas as informa√ß√µes est√£o sendo salvas no servidor!")
            else:
                print(f"‚ùå Erro ao entrar no mundo: {response.message if response else 'Sem resposta'}")
        else:
            print(f"‚ùå Erro no login: {response.message if response else 'Sem resposta'}")
    
    except Exception as e:
        print(f"‚ùå Erro: {e}")
        import traceback
        traceback.print_exc()
    finally:
        grpc_client.close()

if __name__ == "__main__":
    test_sync()
